# SlicerUniGradICON

./: .gitignore  CMakeLists.txt  README.md
UniGradICON/: CMakeLists.txt  UniGradICON.py  icon_helper.py
UniGradICON/Resources/Presets/: multigradicon.json  unigradicon.json
UniGradICON/Resources/UI/: UniGradICON.ui
UniGradICON/UniGradICONHelpers/: icon_helper.py
unigradicon/: CMakeLists.txt  unigradicon.py
unigradicon/Resources/Presets/: unigradicon.json
unigradicon/Resources/UI/: unigradicon.ui
